@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <properties>
-    <neo4j.version>1.2-1.2</neo4j.version>
-    <neo4j-lucene.version>0.2-1.2</neo4j-lucene.version>
+    <neo4j.version>1.3-1.3.M01</neo4j.version>
+    <neo4j-lucene.version>0.5-1.3.M01</neo4j-lucene.version>
     <geotools.version>2.7-M3</geotools.version>
     <spatial.test.osm.version>20100819</spatial.test.osm.version>
     <spatial.test.shp.version>20100819</spatial.test.shp.version>
@@ -23,7 +22,7 @@
   <parent>
     <artifactId>parent-pom</artifactId>
     <groupId>org.neo4j</groupId>
-    <version>8-SNAPSHOT</version>
+    <version>15</version>
   </parent>
 
   <scm>
@@ -102,18 +101,13 @@
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-index</artifactId>
-      <version>${neo4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.neo4j</groupId>
       <artifactId>neo4j-lucene-index</artifactId>
       <version>${neo4j-lucene.version}</version>
     </dependency>
     <dependency>
       <groupId>org.neo4j.app</groupId>
       <artifactId>neo4j-server</artifactId>
-      <version>0.5-1.2</version>
+      <version>0.6-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -154,11 +148,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-    	<groupId>com.googlecode.json-simple</groupId>
-    	<artifactId>json-simple</artifactId>
-    	<version>1.1</version>
-    	<type>jar</type>
-    	<scope>provided</scope>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1</version>
+      <type>jar</type>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <repositories>
@@ -232,15 +226,24 @@
     <plugins>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
-            <configuration>
-            <groups>
-              <group>
-                <title>GIS and Spatial</title>
-                <packages>org.neo4j.gis:org.neo4j.gis.*</packages>
-              </group>
-            </groups>
-            </configuration>
+        <configuration>
+          <groups>
+            <group>
+              <title>GIS and Spatial</title>
+              <packages>org.neo4j.gis:org.neo4j.gis.*</packages>
+            </group>
+          </groups>
+        </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <argLine>-server -Xms512m -Xmx3048m -XX:+UseConcMarkSweepGC</argLine>
+        </configuration>
+      </plugin>
+
     </plugins>
   </reporting>
 
